tests/baselines/reference/computedPropertyNames2_ES6(strict=true).errors.txt
computedPropertyNames2_ES6.ts(6,9): error TS2378: A 'get' accessor must return a value.
computedPropertyNames2_ES6.ts(7,9): error TS7032: Property '[accessorName]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames2_ES6.ts(7,24): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames2_ES6.ts(8,16): error TS2378: A 'get' accessor must return a value.
computedPropertyNames2_ES6.ts(9,16): error TS7032: Property '[accessorName]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames2_ES6.ts(9,31): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== computedPropertyNames2_ES6.ts (6 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName]() { }
        static [methodName]() { }
        get [accessorName]() { }
            ~~~~~~~~~~~~~~
!!! error TS2378: A 'get' accessor must return a value.
        set [accessorName](v) { }
            ~~~~~~~~~~~~~~
!!! error TS7032: Property '[accessorName]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                           ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        static get [accessorName]() { }
                   ~~~~~~~~~~~~~~
!!! error TS2378: A 'get' accessor must return a value.
        static set [accessorName](v) { }
                   ~~~~~~~~~~~~~~
!!! error TS7032: Property '[accessorName]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                                  ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }